Fix: Prevent overlap of recipient name with the subject if the recipient mail address is long (in the sent and the drafts section)

--- a/views/styles/draftsstyles.css
+++ b/views/styles/draftsstyles.css
@@ -159,6 +159,8 @@
 .sender-name,
 .mail-title {
   font-size: 22px;
+  overflow-x: hidden;
+  margin-right: 5%;
 }
 .time {
   font-size: 18px;
